openedx_devops/terraform/stacks/modules/kubernetes_kubeapps/yml/ingress-kubeapps.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "*.k8s.infralabs.cloud"
    secretName: k8s.infralabs.cloud-tls
  rules:
  - host: kubeapps.k8s.infralabs.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port:
              number: 80
